--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
                 <option value="" disabled selected>Select Role...</option>
                 <option value="HELIX PANEL" style="color:var(--primary); font-weight:bold;">HELIX PANEL</option>
                 <option value="Developer" style="color:var(--danger); font-weight:bold;">Developer</option>
-                <option value="Moderator 1">Moderator 1</option>
-                <option value="Moderator 2">Moderator 2</option>
-                <option value="Moderator 3">Moderator 3</option>
-                <option value="Moderator 4">Moderator 4</option>
-                <option value="Moderator 5">Moderator 5</option>
+                <option value="Moderator 1">HOST 1</option>
+                <option value="Moderator 2">HOST 2</option>
+                <option value="Moderator 3">HOST 3</option>
+                <option value="Moderator 4">HOST 4</option>
+                <option value="Moderator 5">HOST 5</option>
             </select>
             <input id="ae" class="modal-inp" placeholder="Email Address">
             <input id="ap" class="modal-inp" type="password" placeholder="Password">
@@ -1091,3 +1091,4 @@
     </script>
 </body>
 </html>
+
